fix lend button on mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10076,6 +10076,7 @@ a.link-dark {
   position: fixed;
   top: auto;
   bottom: 0;
+  left: 0;
   border-radius: 1px;
 }
 @media (min-width: 768px) {
