--- a/public/assets/less/loan.less
+++ b/public/assets/less/loan.less
@@ -170,6 +170,7 @@
   position: fixed;
   top: auto;
   bottom: 0;
+  left: 0;
   border-radius: 1px;
   @media (min-width: @screen-sm-min) {
     display: none;
